k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: hospital-web-app
  labels:
    name: hospital-web-app
    linkerd.io/inject: enabled
